:sparkles: page converter added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
     ],
     "paths": {
       "@components/*": [ "app/core/components/*" ],
+      "@constants/*": [ "app/core/constants/*" ],
+      "@interfaces/*": [ "app/core/interfaces/*" ],
+      "@models/*": [ "app/core/models/*" ],
+      "@services/*": [ "app/core/services/*" ],
     }
   },
   "angularCompilerOptions": {
