:lipstick: dark mode added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,8 @@
       "@interfaces/*": [ "app/core/interfaces/*" ],
       "@models/*": [ "app/core/models/*" ],
       "@services/*": [ "app/core/services/*" ],
+      "@utils/*": [ "app/core/utils/*" ],
+      "@shared/*": [ "app/shared/*" ],
     }
   },
   "angularCompilerOptions": {
