--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test:cov": "npm run test -- --no-watch --code-coverage --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "lint:fix": "npx eslint src/app/**/*.{js,jsx,ts,tsx,html} --quiet --fix"
-
   },
   "private": true,
   "dependencies": {
@@ -44,6 +43,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jasmine": "^4.1.3",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -51,6 +51,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "karma-mocha-reporter": "^2.2.5",
+    "lint-staged": "^15.0.2",
     "typescript": "~4.5.2"
   }
 }
